--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.4",
+    "chart.js": "^4.4.4",
     "idb": "^8.0.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "latest"
   },
   "private": true,
