--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.4",
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
     "idb": "^8.0.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
