--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^4.1.0",
     "idb": "^8.0.0",
     "nuxt": "^3.13.0",
+    "v-calendar": "^3.1.2",
     "vue": "latest",
     "vue-chartjs": "^5.3.1",
     "vue-router": "latest"
