--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.4",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
     "idb": "^8.0.0",
